Fix 'noWrapInfo' CSS class
Fixes #6592

- fixes the issue where `noWrapInfo` is referenced in `core`
without actually having its CSS defined. The `noWrapInfo` is currently
available from other extensions, and if those extensions are not included
the styling is off.
- removes duplication of CSS properties.

--- a/packages/extension-manager/src/browser/style/index.css
+++ b/packages/extension-manager/src/browser/style/index.css
@@ -30,12 +30,6 @@
     display: flex;
 }
 
-.noWrapInfo {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
 .row {
     width: 100%;
 }
